[gd_scene load_steps=25 format=2]

[ext_resource path="res://Src/Assets/GUI/inventory1.jpg" type="Texture" id=1]
[ext_resource path="res://Src/Assets/GUI/inventory-slot.png" type="Texture" id=2]
[ext_resource path="res://Src/Player&Inventory/Inventory/Slot.gd" type="Script" id=3]
[ext_resource path="res://Src/Player&Inventory/Inventory/Inventory.gd" type="Script" id=4]
[ext_resource path="res://Src/Assets/Fonts/Roboto-Black.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Src/Assets/Items/Icons/grey-shoes.png" type="Texture" id=6]
[ext_resource path="res://Src/Assets/Items/Icons/grey-pants.png" type="Texture" id=7]
[ext_resource path="res://Src/Assets/Items/Icons/grey-shorts.png" type="Texture" id=8]
[ext_resource path="res://Src/Assets/Items/Icons/grey-shirt.png" type="Texture" id=9]
[ext_resource path="res://Src/Assets/GUI/inventory-slot-inactive.png" type="Texture" id=10]
[ext_resource path="res://Src/Assets/Items/Icons/grey-ring.png" type="Texture" id=11]
[ext_resource path="res://Src/Assets/Items/Icons/GreenHikingBackpack.png" type="Texture" id=12]
[ext_resource path="res://Src/Assets/Items/Icons/carbon-necklace.png" type="Texture" id=13]
[ext_resource path="res://Src/Assets/GUI/inventory-clothing-panel.jpg" type="Texture" id=14]

[sub_resource type="DynamicFont" id=4]
size = 41
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 5
extra_spacing_space = 7
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 4 )

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 100, 100 )

[sub_resource type="DynamicFont" id=12]
size = 21
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=13]
default_font = SubResource( 12 )

[sub_resource type="DynamicFont" id=8]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=9]
default_font = SubResource( 8 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 100, 100 )

[sub_resource type="DynamicFont" id=10]
size = 19
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=11]
default_font = SubResource( 10 )

[node name="Inventory" type="Node2D"]
z_index = 2
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.415686 )
margin_right = 1000.0
margin_bottom = 600.0
texture = ExtResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 369.0
margin_top = -22.0
margin_right = 613.0
margin_bottom = 69.0
theme = SubResource( 3 )
bbcode_text = "Inventory"
text = "Inventory"

[node name="GridContainer" type="GridContainer" parent="." groups=["Weapons"]]
margin_left = 120.0
margin_top = 126.0
margin_right = 864.0
margin_bottom = 462.0
custom_constants/vseparation = 4
custom_constants/hseparation = 4
columns = 10

[node name="Slot1" type="Panel" parent="GridContainer"]
margin_right = 80.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot2" type="Panel" parent="GridContainer"]
margin_left = 84.0
margin_right = 164.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot3" type="Panel" parent="GridContainer"]
margin_left = 168.0
margin_right = 248.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot4" type="Panel" parent="GridContainer"]
margin_left = 252.0
margin_right = 332.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot5" type="Panel" parent="GridContainer"]
margin_left = 336.0
margin_right = 416.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot6" type="Panel" parent="GridContainer"]
margin_left = 420.0
margin_right = 500.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot7" type="Panel" parent="GridContainer"]
margin_left = 504.0
margin_right = 584.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot8" type="Panel" parent="GridContainer"]
margin_left = 588.0
margin_right = 668.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot9" type="Panel" parent="GridContainer"]
margin_left = 672.0
margin_right = 752.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot10" type="Panel" parent="GridContainer"]
margin_left = 756.0
margin_right = 836.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot11" type="Panel" parent="GridContainer"]
margin_top = 84.0
margin_right = 80.0
margin_bottom = 164.0
rect_min_size = Vector2( 80, 80 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot12" type="Panel" parent="GridContainer"]
margin_left = 84.0
margin_top = 84.0
margin_right = 164.0
margin_bottom = 164.0
rect_min_size = Vector2( 80, 80 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot13" type="Panel" parent="GridContainer"]
margin_left = 168.0
margin_top = 84.0
margin_right = 248.0
margin_bottom = 164.0
rect_min_size = Vector2( 80, 80 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot14" type="Panel" parent="GridContainer"]
margin_left = 252.0
margin_top = 84.0
margin_right = 332.0
margin_bottom = 164.0
rect_min_size = Vector2( 80, 80 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot15" type="Panel" parent="GridContainer"]
margin_left = 336.0
margin_top = 84.0
margin_right = 416.0
margin_bottom = 164.0
rect_min_size = Vector2( 80, 80 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot16" type="Panel" parent="GridContainer"]
margin_left = 420.0
margin_top = 84.0
margin_right = 500.0
margin_bottom = 164.0
rect_min_size = Vector2( 80, 80 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot17" type="Panel" parent="GridContainer"]
margin_left = 504.0
margin_top = 84.0
margin_right = 584.0
margin_bottom = 164.0
rect_min_size = Vector2( 80, 80 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot18" type="Panel" parent="GridContainer"]
margin_left = 588.0
margin_top = 84.0
margin_right = 668.0
margin_bottom = 164.0
rect_min_size = Vector2( 80, 80 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot19" type="Panel" parent="GridContainer"]
margin_left = 672.0
margin_top = 84.0
margin_right = 752.0
margin_bottom = 164.0
rect_min_size = Vector2( 80, 80 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot20" type="Panel" parent="GridContainer"]
margin_left = 756.0
margin_top = 84.0
margin_right = 836.0
margin_bottom = 164.0
rect_min_size = Vector2( 80, 80 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot21" type="Panel" parent="GridContainer"]
margin_top = 168.0
margin_right = 80.0
margin_bottom = 248.0
rect_min_size = Vector2( 80, 80 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot22" type="Panel" parent="GridContainer"]
margin_left = 84.0
margin_top = 168.0
margin_right = 164.0
margin_bottom = 248.0
rect_min_size = Vector2( 80, 80 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot23" type="Panel" parent="GridContainer"]
margin_left = 168.0
margin_top = 168.0
margin_right = 248.0
margin_bottom = 248.0
rect_min_size = Vector2( 80, 80 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot24" type="Panel" parent="GridContainer"]
margin_left = 252.0
margin_top = 168.0
margin_right = 332.0
margin_bottom = 248.0
rect_min_size = Vector2( 80, 80 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot25" type="Panel" parent="GridContainer"]
margin_left = 336.0
margin_top = 168.0
margin_right = 416.0
margin_bottom = 248.0
rect_min_size = Vector2( 80, 80 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot26" type="Panel" parent="GridContainer"]
margin_left = 420.0
margin_top = 168.0
margin_right = 500.0
margin_bottom = 248.0
rect_min_size = Vector2( 80, 80 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot27" type="Panel" parent="GridContainer"]
margin_left = 504.0
margin_top = 168.0
margin_right = 584.0
margin_bottom = 248.0
rect_min_size = Vector2( 80, 80 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot28" type="Panel" parent="GridContainer"]
margin_left = 588.0
margin_top = 168.0
margin_right = 668.0
margin_bottom = 248.0
rect_min_size = Vector2( 80, 80 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot29" type="Panel" parent="GridContainer"]
margin_left = 672.0
margin_top = 168.0
margin_right = 752.0
margin_bottom = 248.0
rect_min_size = Vector2( 80, 80 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot30" type="Panel" parent="GridContainer"]
margin_left = 756.0
margin_top = 168.0
margin_right = 836.0
margin_bottom = 248.0
rect_min_size = Vector2( 80, 80 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot31" type="Panel" parent="GridContainer"]
margin_top = 252.0
margin_right = 80.0
margin_bottom = 332.0
rect_min_size = Vector2( 80, 80 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot32" type="Panel" parent="GridContainer"]
margin_left = 84.0
margin_top = 252.0
margin_right = 164.0
margin_bottom = 332.0
rect_min_size = Vector2( 80, 80 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot33" type="Panel" parent="GridContainer"]
margin_left = 168.0
margin_top = 252.0
margin_right = 248.0
margin_bottom = 332.0
rect_min_size = Vector2( 80, 80 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot34" type="Panel" parent="GridContainer"]
margin_left = 252.0
margin_top = 252.0
margin_right = 332.0
margin_bottom = 332.0
rect_min_size = Vector2( 80, 80 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot35" type="Panel" parent="GridContainer"]
margin_left = 336.0
margin_top = 252.0
margin_right = 416.0
margin_bottom = 332.0
rect_min_size = Vector2( 80, 80 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot36" type="Panel" parent="GridContainer"]
margin_left = 420.0
margin_top = 252.0
margin_right = 500.0
margin_bottom = 332.0
rect_min_size = Vector2( 80, 80 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot37" type="Panel" parent="GridContainer"]
margin_left = 504.0
margin_top = 252.0
margin_right = 584.0
margin_bottom = 332.0
rect_min_size = Vector2( 80, 80 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot38" type="Panel" parent="GridContainer"]
margin_left = 588.0
margin_top = 252.0
margin_right = 668.0
margin_bottom = 332.0
rect_min_size = Vector2( 80, 80 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot39" type="Panel" parent="GridContainer"]
margin_left = 672.0
margin_top = 252.0
margin_right = 752.0
margin_bottom = 332.0
rect_min_size = Vector2( 80, 80 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot40" type="Panel" parent="GridContainer"]
margin_left = 756.0
margin_top = 252.0
margin_right = 836.0
margin_bottom = 332.0
rect_min_size = Vector2( 80, 80 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="ModSlots" type="GridContainer" parent="."]
margin_left = 300.0
margin_top = 500.0
margin_right = 736.0
margin_bottom = 580.0
custom_constants/hseparation = 9
columns = 5

[node name="Stock" type="Panel" parent="ModSlots"]
margin_right = 80.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )

[node name="Maganize" type="Panel" parent="ModSlots"]
margin_left = 89.0
margin_right = 169.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )

[node name="Silencer" type="Panel" parent="ModSlots"]
margin_left = 178.0
margin_right = 258.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )

[node name="Lazer" type="Panel" parent="ModSlots"]
margin_left = 267.0
margin_right = 347.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )

[node name="Scope" type="Panel" parent="ModSlots"]
margin_left = 356.0
margin_right = 436.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )

[node name="ModText" type="RichTextLabel" parent="."]
margin_left = 450.0
margin_top = 475.0
margin_right = 590.0
margin_bottom = 502.0
rect_min_size = Vector2( 140, 0 )
theme = SubResource( 13 )
text = "Modifications"

[node name="ClothingContainer" type="Node2D" parent="."]
z_index = 1

[node name="ClothingRect" type="TextureRect" parent="ClothingContainer"]
visible = false
margin_left = 117.0
margin_top = 33.0
margin_right = 617.0
margin_bottom = 533.0
texture = ExtResource( 14 )

[node name="ClothingText" type="RichTextLabel" parent="ClothingContainer"]
visible = false
self_modulate = Color( 1, 0.760784, 0, 1 )
margin_left = 128.0
margin_top = 52.0
margin_right = 253.0
margin_bottom = 92.0
rect_min_size = Vector2( 125, 0 )
theme = SubResource( 9 )
text = "Clothing"

[node name="EquipSlots" type="GridContainer" parent="ClothingContainer"]
visible = false
margin_left = 124.0
margin_top = 83.0
margin_right = 624.0
margin_bottom = 583.0
columns = 3

[node name="ShirtSlot" type="Panel" parent="ClothingContainer/EquipSlots"]
margin_right = 80.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
custom_styles/panel = SubResource( 7 )
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="ClothingContainer/EquipSlots/ShirtSlot"]
self_modulate = Color( 1, 1, 1, 0.521569 )
margin_left = 3.0
margin_top = 20.0
margin_right = 53.0
margin_bottom = 55.0
rect_min_size = Vector2( 35, 35 )
rect_scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 9 )

[node name="NecklacesSlot" type="Panel" parent="ClothingContainer/EquipSlots"]
margin_left = 84.0
margin_right = 164.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
custom_styles/panel = SubResource( 7 )
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="ClothingContainer/EquipSlots/NecklacesSlot"]
self_modulate = Color( 1, 1, 1, 0.521569 )
margin_left = 1.0
margin_top = 15.0
margin_right = 41.0
margin_bottom = 45.0
rect_min_size = Vector2( 30, 20 )
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 13 )

[node name="VestsSlot" type="Panel" parent="ClothingContainer/EquipSlots"]
margin_left = 168.0
margin_right = 248.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
custom_styles/panel = SubResource( 7 )
script = ExtResource( 3 )

[node name="ShortsSlot" type="Panel" parent="ClothingContainer/EquipSlots"]
margin_top = 84.0
margin_right = 80.0
margin_bottom = 164.0
rect_min_size = Vector2( 80, 80 )
custom_styles/panel = SubResource( 7 )
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="ClothingContainer/EquipSlots/ShortsSlot"]
self_modulate = Color( 1, 1, 1, 0.521569 )
margin_left = 17.0
margin_top = 31.0
margin_right = 42.0
margin_bottom = 45.0
rect_min_size = Vector2( 25, 10 )
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 8 )

[node name="BackpacksSlot" type="Panel" parent="ClothingContainer/EquipSlots"]
margin_left = 84.0
margin_top = 84.0
margin_right = 164.0
margin_bottom = 164.0
rect_min_size = Vector2( 80, 80 )
custom_styles/panel = SubResource( 7 )
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="ClothingContainer/EquipSlots/BackpacksSlot"]
self_modulate = Color( 0.705882, 0.705882, 0.705882, 0.439216 )
margin_left = 15.0
margin_top = 8.0
margin_right = 46.0
margin_bottom = 58.0
rect_min_size = Vector2( 35, 50 )
rect_scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 12 )

[node name="GrenadesSlot" type="Panel" parent="ClothingContainer/EquipSlots"]
margin_left = 168.0
margin_top = 84.0
margin_right = 248.0
margin_bottom = 164.0
rect_min_size = Vector2( 80, 80 )
custom_styles/panel = SubResource( 7 )
script = ExtResource( 3 )

[node name="PantsSlot" type="Panel" parent="ClothingContainer/EquipSlots"]
margin_top = 168.0
margin_right = 80.0
margin_bottom = 248.0
rect_min_size = Vector2( 80, 80 )
custom_styles/panel = SubResource( 7 )
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="ClothingContainer/EquipSlots/PantsSlot"]
self_modulate = Color( 1, 1, 1, 0.521569 )
margin_left = 17.0
margin_top = 25.0
margin_right = 47.0
margin_bottom = 45.0
rect_min_size = Vector2( 30, 20 )
rect_scale = Vector2( 2, 2.5 )
texture = ExtResource( 7 )

[node name="LeftRingsSlot" type="Panel" parent="ClothingContainer/EquipSlots"]
margin_left = 84.0
margin_top = 168.0
margin_right = 164.0
margin_bottom = 248.0
rect_min_size = Vector2( 80, 80 )
custom_styles/panel = SubResource( 7 )
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="ClothingContainer/EquipSlots/LeftRingsSlot"]
self_modulate = Color( 1, 1, 1, 0.521569 )
margin_left = 4.0
margin_top = 13.0
margin_right = 44.0
margin_bottom = 43.0
rect_min_size = Vector2( 30, 20 )
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 11 )

[node name="LeftUtilitiesSlot" type="Panel" parent="ClothingContainer/EquipSlots"]
margin_left = 168.0
margin_top = 168.0
margin_right = 248.0
margin_bottom = 248.0
rect_min_size = Vector2( 80, 80 )
custom_styles/panel = SubResource( 7 )
script = ExtResource( 3 )

[node name="ShoesSlot" type="Panel" parent="ClothingContainer/EquipSlots"]
margin_top = 252.0
margin_right = 80.0
margin_bottom = 332.0
rect_min_size = Vector2( 80, 80 )
custom_styles/panel = SubResource( 7 )
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="ClothingContainer/EquipSlots/ShoesSlot"]
self_modulate = Color( 1, 1, 1, 0.521569 )
margin_left = 11.0
margin_top = 26.0
margin_right = 41.0
margin_bottom = 46.0
rect_min_size = Vector2( 30, 20 )
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 6 )

[node name="RightRingsSlot" type="Panel" parent="ClothingContainer/EquipSlots"]
margin_left = 84.0
margin_top = 252.0
margin_right = 164.0
margin_bottom = 332.0
rect_min_size = Vector2( 80, 80 )
custom_styles/panel = SubResource( 7 )
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="ClothingContainer/EquipSlots/RightRingsSlot"]
self_modulate = Color( 1, 1, 1, 0.521569 )
margin_left = 3.0
margin_top = 13.0
margin_right = 43.0
margin_bottom = 43.0
rect_min_size = Vector2( 30, 20 )
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 11 )

[node name="RightUtilitiesSlot" type="Panel" parent="ClothingContainer/EquipSlots"]
margin_left = 168.0
margin_top = 252.0
margin_right = 248.0
margin_bottom = 332.0
rect_min_size = Vector2( 80, 80 )
custom_styles/panel = SubResource( 7 )
script = ExtResource( 3 )

[node name="TextureButton" type="TextureButton" parent="ClothingContainer"]
self_modulate = Color( 1, 0.772549, 0, 1 )
margin_right = 100.0
margin_bottom = 100.0
texture_normal = ExtResource( 10 )

[node name="RichTextLabel2" type="RichTextLabel" parent="ClothingContainer/TextureButton"]
self_modulate = Color( 1, 0.796078, 0, 1 )
margin_left = 16.0
margin_top = 42.0
margin_right = 90.0
margin_bottom = 72.0
mouse_filter = 1
theme = SubResource( 11 )
text = "Clothing"

[connection signal="pressed" from="ClothingContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
